[gd_scene load_steps=5 format=2]

[ext_resource path="res://Carton/Carton.gd" type="Script" id=1]
[ext_resource path="res://Carton/New Piskel.png" type="Texture" id=2]
[ext_resource path="res://Carton/CartonBody.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150.25, 74.25 )

[node name="Carton" type="Node2D"]
script = ExtResource( 1 )

[node name="CartonBody" type="StaticBody2D" parent="."]
input_pickable = true
script = ExtResource( 3 )

[node name="CollisionCarton" type="CollisionShape2D" parent="CartonBody"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CartonBody"]
scale = Vector2( 3.01, 2.98 )
texture = ExtResource( 2 )

[connection signal="clickBox" from="CartonBody" to="." method="_on_CartonBody_clickBox"]
[connection signal="input_event" from="CartonBody" to="CartonBody" method="_on_Carton_input_event"]
